Fix word wrapping in package display cards

--- a/resources/PageExchange.css
+++ b/resources/PageExchange.css
@@ -9,6 +9,7 @@ div.pageExchangeCard {
 	padding: 10px;
 	margin: 10px;
 	box-shadow: 0 4px 8px 0 rgba( 0, 0, 0, 0.2 );
+	word-break: break-word;
 }
 
 div.pageExchangeCardHeader {
